--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+	<div class="cirles">
+		<div class="circle">1</div>
+		<div class="circle">2</div>
+		<div class="circle">3</div>
+		<div class="circle">4</div>
+		<div class="circle">5</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
